# gtklock-xkb-layout-module

./: PKGBUILD  README.md  build.zig  build.zig.zon  gtklock-module.h  main.c  meson.build  module.c  module.h  wayland.c  wayland.h
src/: gtklock.zig  lib.zig  state.zig  util.zig
